[package]
name = "keccak_prime"
version = "0.1.0"
authors = ["Zenotta <zenotta@zenotta.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crunchy = "0.2.2"
hex = "0.4.2"

# used for the expansion function
aes-gcm-siv = "0.9.0"

# used in the SlothVDF implementation
num-traits = "0.2"
num-bigint = "0.4"
lazy_static = "1.4"
# crypto-bigint = "0.4"

vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", branch = "master", optional = true }
clspv-sys = { git = "https://github.com/nbaksalyar/clspv-sys.git", branch = "main", optional = true }

[features]
default = ["fips202", "prf_vulkan", "prf_vulkan_build_clspv"]
cshake = []
fips202 = ["keccak", "shake", "sha3"]
k12 = []
keccak = []
kmac = ["cshake"]
parallel_hash = ["cshake"]
sha3 = []
shake = []
sp800 = ["cshake", "kmac", "tuple_hash"]
tuple_hash = ["cshake"]

# Vulkan-based GPU compute runtime
prf_vulkan = ["vulkano"]

# If this feature is enabled, it will use `clspv-sys` dependency to automatically
# download and build `clspv`, OpenCL -> Vulkan SPIR-V compiler.
prf_vulkan_build_clspv = ["clspv-sys"]

[[bin]]
name = "main"
